--- a/Bookshelf/Views/BookList.xaml
+++ b/Bookshelf/Views/BookList.xaml
@@ -69,8 +69,12 @@
                         </CollectionView.ItemTemplate>
                     </CollectionView>-->
 
-                <ListView HasUnevenRows="True" CachingStrategy="RecycleElement" 
-                              ItemsSource="{Binding BooksList}" SelectedItem="{Binding BookItem}">
+                <ListView 
+                    HasUnevenRows="True"
+                    CachingStrategy="RecycleElement"                              
+                    ItemsSource="{Binding BooksList}"
+                    SelectedItem="{Binding BookItem}"
+                    >
                     <ListView.Behaviors>
                         <behaviors:InfiniteScrollBehavior LoadMoreCommand="{Binding LoadMoreCommand}" />
                     </ListView.Behaviors>
